# dream-mobility

./: .dockerignore  .gitignore  .golangci.yml  CLAUDE.md  Makefile  ONBOARDING.md  OVERVIEW.md  PROJECT_FILES_GUIDE.md  README.md  go.mod  go.sum
.claude/agents/: go-service-reviewer.md  infra-reviewer.md  storage-analytics-reviewer.md  streaming-data-reviewer.md
.claude/commands/: audit.md
.github/workflows/: ci.yml
cmd/clickhouse-sink/: Dockerfile  main.go
cmd/ingest-api/: Dockerfile  main.go
cmd/query-api/: Dockerfile  main.go
cmd/stream-processor/: Dockerfile  main.go  main_test.go
deploy/: docker-compose.yml
deploy/argocd/: root.yaml
deploy/argocd/apps/: archiver.yaml  clickhouse-sink.yaml  ingest-api.yaml  opensky-ingest.yaml  postgres-retention.yaml  query-api.yaml  stream-processor.yaml
deploy/grafana/provisioning/dashboards/: dashboards.yaml
deploy/grafana/provisioning/datasources/: datasources.yaml
deploy/helm/archiver/: Chart.yaml  values-kind.yaml  values.yaml
deploy/helm/archiver/templates/: deployment.yaml
deploy/helm/clickhouse-sink/: Chart.yaml  values-kind.yaml  values.yaml
deploy/helm/ingest-api/: Chart.yaml  values-kind.yaml  values.yaml
deploy/helm/ingest-api/templates/: deployment.yaml  (+1 more)
deploy/helm/opensky-ingest/: Chart.yaml  values-kind.yaml  values.yaml
deploy/helm/postgres-retention/: Chart.yaml  values-kind.yaml  values.yaml
deploy/helm/query-api/: Chart.yaml  values-kind.yaml  values.yaml
deploy/helm/stream-processor/: Chart.yaml  values-kind.yaml  values.yaml
deploy/kind/: kind-cluster.yaml
deploy/observability/: docker-compose.observability.yml  otel-collector.yaml  prometheus.yml
deploy/postgres/init/: 01-init.sql
internal/api/: handler.go  handler_test.go  model.go  validation.go  validation_test.go
internal/avro/: flight_telemetry.avsc  flight_telemetry.go  gen.go  movement_event.avsc  movement_event.go
internal/chsink/: schema.sql  sink.go  sink_test.go
internal/config/: config.go  config_test.go
internal/kafkametrics/: metrics.go
internal/otel/: otel.go
internal/processor/: decode.go  processor.go  processor_test.go  schema.sql  store.go  store_test.go
internal/producer/: producer.go  producer_test.go
internal/query/: cursor.go  cursor_test.go  handler.go  handler_test.go  store.go
internal/tracing/: kafka.go
loadtest/: README.md  ingest.js
schemas/: movement_event.avsc
scripts/: kind-deploy.sh  kind-up.sh  register-schemas.sh  smoke-api.sh  sr-state.sh
services/archiver/: Dockerfile  archiver.py  pyproject.toml
services/opensky-ingest/: Dockerfile  opensky_ingest.py  pyproject.toml
testdata/: sample_batch.json  sample_event.json
tools/generator/: README.md  gen.py  pyproject.toml
tools/lake-query/: pyproject.toml  query.py
(+9 files in other folders)
