[project]
name = "dream-flight-opensky-ingest"
version = "0.1.0"
description = "OpenSky → Kafka producer for the Dream Flight pipeline."
requires-python = ">=3.11"
dependencies = [
    "confluent-kafka>=2.5.0,<3.0.0",
    "fastavro>=1.9.0,<2.0.0",
    "requests>=2.32,<3.0.0",
    "opentelemetry-api>=1.27.0,<2.0.0",
    "opentelemetry-sdk>=1.27.0,<2.0.0",
    "opentelemetry-exporter-otlp-proto-http>=1.27.0,<2.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W", "UP", "SIM"]
