[project]
name = "dream-mobility-lake-query"
version = "0.1.0"
description = "Ad-hoc query CLI for the Dream Mobility Iceberg lake."
requires-python = ">=3.11"
dependencies = [
    "pyiceberg[s3fs,pyarrow]>=0.7.0,<0.9.0",
    "pyarrow>=17.0.0,<20.0.0",
    "duckdb>=1.0.0,<2.0.0",
    # fetchdf() requires pandas → numpy.
    "pandas>=2.0.0,<3.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
